# gen-prime

./: .gitmodules  Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  main.rs  primes.rs
